--- a/Testing/Deployment.yaml
+++ b/Testing/Deployment.yaml
@@ -13,8 +13,8 @@ spec:
         type: front-end
     spec:
       containers:
-        - name: nginx-container
-          image: nginx
+        - name: httpd-frontend
+          image: httpd:2.4-alpine
     replicas: 3
     selector:
       matchLabels:
