--- a/ConfigMaps/DeclarativeConfigMap.yaml
+++ b/ConfigMaps/DeclarativeConfigMap.yaml
@@ -1,10 +1,12 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: weebapp-config-map
+  name: webapp-config-map
 data:
-  APP_COLOR: darbblue
+  APP_COLOR: darkblue
   APP_MODE: prod
+
+
 
   #mysql-config
 envFrom:
