--- a/Secrets/Declarative secret-data.yaml
+++ b/Secrets/Declarative secret-data.yaml
@@ -1,8 +1,14 @@
 apiVersion: v1
-kind: Secret
+kind: secret
 metadata:
-  name: app-secret
+  name: db-secret
 data:
-  DB_HOST: mysql
+  DB_HOST: sql01
   DB_User: root
-  DB_Password: paswrd
+  DB_Password: password123
+
+
+  kubectl create secret generic db-secret \
+  --from-literal=DB_Host=sql01 \
+  --from-literal=DB_User=root \
+  --from-literal=DB_Password=password123
