Added Kube changes

--- a/Lightning_Lab01/pvc.yaml
+++ b/Lightning_Lab01/pvc.yaml
@@ -8,6 +8,4 @@ spec:
   resources:
     requests:
       storage: 200Mi
-  selector:
-    matchLabels:
-      tier: log-volume
+  storageClassName: manual
