--- a/Volumes/pv-definition.yaml
+++ b/Volumes/pv-definition.yaml
@@ -1,14 +1,15 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv-log
+  name: log-voloume
 spec:
+  storageClassName: manual
   accessModes:
-    - ReadWriteMany/ReadWriteOnce
+    - ReadWriteMany
   capacity:
     storage: 100Mi
   hostPath:
-    path: /pv/log
+    path: /opt/volume/nginx
 
   awsElasticBlockStore:
     volumeID: <volume-ID>
