--- a/WordPress-KubeChallenge/Database/Mysql-PVC.yaml
+++ b/WordPress-KubeChallenge/Database/Mysql-PVC.yaml
@@ -1,13 +1,15 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: log-claim
+  name: mysql-persistent-storage
+  labels:
+    app: mysql
 spec:
   accessModes:
     - ReadWriteMany
   resources:
     requests:
-      storage: 200Mi
+      storage: 1Gi
   selector:
     matchLabels:
-      tier: log-volume
+      tier: mysql
